Build on @sepastian PySpark README updates.