@@ -54,19 +54,8 @@ docker run --rm -it archivesunleashed/docker-aut:latest /spark/bin/spark-shell -
 Once the build finishes, you should see:
 
 ```bash
-20/06/18 09:43:08 WARN Utils: Your hostname, bomba resolves to a loopback address: 127.0.1.1; using 192.168.4.94 instead (on interface wlp2s0)
-20/06/18 09:43:08 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address
-WARNING: An illegal reflective access operation has occurred
-WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/nruest/bin/spark-3.0.0-bin-hadoop2.7/jars/spark-unsafe_2.12-3.0.0.jar) to constructor java.nio.DirectByteBuffer(long,int)
-WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform
-WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-WARNING: All illegal access operations will be denied in a future release
-20/06/18 09:43:08 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable
-Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties
-Setting default log level to "WARN".
-To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).
-Spark context Web UI available at http://192.168.4.94:4040
-Spark context available as 'sc' (master = local[*], app id = local-1592487792942).
+Spark context Web UI available at http://c1c9c5ad6970:4040
+Spark context available as 'sc' (master = local[*], app id = local-1565792045935).
 Spark session available as 'spark'.
 Welcome to
       ____              __
@@ -119,19 +108,7 @@ SparkSession available as 'spark'.
 >>>
 ```
 
-The example above loads version `0.70.1` of the Java/Scala packages. Your build may have packages in another version, to see what is available and select the right files, run the following.
-
-```bash
-$ docker run --rm --entrypoint=/bin/ls archivesunleashed/docker-aut -lh /aut/target
-apidocs
-archive-tmp
-aut-0.70.1-SNAPSHOT-fatjar.jar       # Java/Scala bindings
-aut-0.70.1-SNAPSHOT-javadoc.jar
-aut-0.70.1-SNAPSHOT-test-javadoc.jar
-aut-0.70.1-SNAPSHOT.jar
-aut.zip                              # Python bindings
-:
-```
+For more information, see the [Archives Unleashed Toolkit with PySpark](https://github.com/archivesunleashed/aut#archives-unleashed-toolkit-with-pyspark) of the Toolkit README.
 
 Specifying Java/Scala packages with `--jars` will use local (inside the container) JAR files.
 It is also possible to download these packages from maven central by specifying `--packages` instead of `--jars`.
@@ -277,6 +254,41 @@ You should then see the following:
 |  20060622|http://communist-...|http://www.calend...|                    |
 |  20060622|http://communist-...|mailto:webmaster@...|webmaster@calenda...|
 |  20060622|http://www.ccsd.c...|http://www.ccsd.c...|                    |
++----------+--------------------+--------------------+--------------------+
+only showing top 10 rows
+
+>>>
+```
+
+In this case, things are working! Try substituting your own data (mounted using the command above).
+
+To quit the PySpark console, you can exit using <kbd>CTRL</kbd>+<kbd>c</kbd>.
+
+### PySpark
+
+When the images is running, you will be brought to the PySpark interface. Try running the following commands:
+
+```python
+from aut import *
+WebArchive(sc, sqlContext, "/aut-resources/Sample-Data/*.gz").webgraph().show(10)
+```
+
+You should then see the following:
+
+```
++----------+--------------------+--------------------+--------------------+
+|crawl_date|                 src|                dest|              anchor|
++----------+--------------------+--------------------+--------------------+
+|  20091218|http://www.equalv...|http://www.equalv...|                    |
+|  20091218|http://www.equalv...|http://www.equalv...|       RSS SUBSCRIBE|
+|  20091218|http://www.equalv...|http://www.equalv...|Bulletin d’AVE - ...|
+|  20091218|http://www.equalv...|http://www.equalv...|MORE ABOUT EV'S Y...|
+|  20091218|http://www.equalv...|http://www.thesta...|Coyle: Honouring ...|
+|  20091218|http://www.equalv...|http://gettingtot...|Getting to the Ga...|
+|  20091218|http://www.equalv...|http://www.snapde...|                    |
+|  20091218|http://www.libera...|http://www.libera...|Liberal Party of ...|
+|  20091218|http://www.libera...|http://www.libera...|   Michael Ignatieff|
+|  20091218|http://www.libera...|http://www.libera...|        Introduction|
 +----------+--------------------+--------------------+--------------------+
 only showing top 10 rows
 
